cargo_check.log
    Checking katana-ui v0.8.11 (/Users/hiroyuki_furuno/works/private/katana/crates/katana-ui)
error[E0433]: failed to resolve: could not find `popup` in `egui`
   --> crates/katana-ui/src/views/app_frame.rs:219:43
    |
219 | ...                   egui::popup::popup_below_widget(ui, popup_id, &interact_resp, egui::PopupCloseBehavior::CloseOnClick, |ui| {
    |                             ^^^^^ could not find `popup` in `egui`
    |
help: a struct with a similar name exists
    |
219 -                                     egui::popup::popup_below_widget(ui, popup_id, &interact_resp, egui::PopupCloseBehavior::CloseOnClick, |ui| {
219 +                                     egui::Popup::popup_below_widget(ui, popup_id, &interact_resp, egui::PopupCloseBehavior::CloseOnClick, |ui| {
    |

error[E0425]: cannot find value `resp` in this scope
   --> crates/katana-ui/src/views/app_frame.rs:246:54
    |
246 | ...                   let ghost_rect = resp.rect.translate(drag_offset);
    |                                        ^^^^
    |
help: the binding `resp` is available in a different scope in the same function
   --> crates/katana-ui/src/views/app_frame.rs:209:41
    |
209 | ...                   let resp = ui.add_enabled(!recent_paths.is_empty(), btn);
    |                           ^^^^

error: use of deprecated method `egui::Memory::is_popup_open`: Use Popup::is_id_open instead
   --> crates/katana-ui/src/views/app_frame.rs:208:60
    |
208 | ...                   if ui.memory(|mem| mem.is_popup_open(popup_id)) { btn = btn.fill(ui.visuals().selection.bg_fill); }
    |                                              ^^^^^^^^^^^^^
    |
note: the lint level is defined here
   --> crates/katana-ui/src/lib.rs:1:9
    |
  1 | #![deny(warnings, clippy::all)]
    |         ^^^^^^^^
    = note: `#[deny(deprecated)]` implied by `#[deny(warnings)]`

error: use of deprecated method `egui::Memory::toggle_popup`: Use Popup::toggle_id instead
   --> crates/katana-ui/src/views/app_frame.rs:216:65
    |
216 | ...                   ui.memory_mut(|mem| mem.toggle_popup(popup_id));
    |                                               ^^^^^^^^^^^^

error[E0282]: type annotations needed
   --> crates/katana-ui/src/views/app_frame.rs:219:140
    |
219 | ...                   egui::popup::popup_below_widget(ui, popup_id, &interact_resp, egui::PopupCloseBehavior::CloseOnClick, |ui| {
    |                                                                                                                              ^^
220 | ...                       for path in recent_paths.iter().rev() {
221 | ...                           ui.horizontal(|ui| {
    |                               -- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
219 |                                     egui::popup::popup_below_widget(ui, popup_id, &interact_resp, egui::PopupCloseBehavior::CloseOnClick, |ui: /* Type */| {
    |                                                                                                                                              ++++++++++++

error[E0282]: type annotations needed
   --> crates/katana-ui/src/views/app_frame.rs:221:60
    |
221 | ...   ui.horizontal(|ui| {
    |                      ^^
222 | ...       if ui.add(egui::Button::image_and_text(crate::Icon::Remove.ui_image(ui, crate::icon::IconSize::Small), crate::shell_ui::i...
    |              -- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
221 |                                             ui.horizontal(|ui: /* Type */| {
    |                                                              ++++++++++++

error[E0282]: type annotations needed
   --> crates/katana-ui/src/views/app_frame.rs:226:68
    |
226 | ...                   ui.memory_mut(|mem| mem.close_popup());
    |                                      ^^^  --- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
226 |                                                     ui.memory_mut(|mem: /* Type */| mem.close_popup());
    |                                                                       ++++++++++++

error[E0282]: type annotations needed
   --> crates/katana-ui/src/views/app_frame.rs:230:68
    |
230 | ...                   ui.memory_mut(|mem| mem.close_popup());
    |                                      ^^^  --- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
230 |                                                     ui.memory_mut(|mem: /* Type */| mem.close_popup());
    |                                                                       ++++++++++++

Some errors have detailed explanations: E0282, E0425, E0433.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `katana-ui` (lib) due to 8 previous errors
